@@ -119,14 +119,14 @@ main (argc, argv) = let
     ncpu := ncpu + 1
   end // end of [val]
 // 
-  val nworker = workshop_get_nworker(ws)
-//
   var !p_arr with pf_arr = @[ulint][NCPU](0UL)
 //
   val () = insert_all(pf_arr | ws, p_arr, NCPU, ITER)
+//
   val () = workshop_wait_blocked_all(ws)
 //
   var j: Nat = 0
+  val nworker = workshop_get_nworker(ws) // = NCPU
   val () = while (j < nworker) let
     val () = workshop_insert_work(ws, Quit ()) in j := j + 1
   end // end of [val]
